--- a/frontend/templates/admin_restaurant_coverage.html
+++ b/frontend/templates/admin_restaurant_coverage.html
@@ -33,12 +33,18 @@
   <section class="section">
     <h2 class="section-title">{{ t('coverage.filters', lang) }}</h2>
     <div class="form-card">
-      <form method="get" action="/restaurant/coverage" class="stack-md">
-        <label class="field-inline"><input type="checkbox" name="assigned_only" value="1" {% if assigned_only %}checked{% endif %}/> {{ t('coverage.filter.assigned_only', lang) }}</label>
-        <label class="field-inline"><input type="checkbox" name="show_inactive" value="1" {% if show_inactive %}checked{% endif %}/> {{ t('coverage.filter.show_inactive', lang) }}</label>
+      <form method="get" action="/restaurant/coverage" class="filters">
+        <label class="filter-row">
+          <input type="checkbox" name="assigned_only" value="1" {% if assigned_only %}checked{% endif %}/>
+          <span>{{ t('coverage.filter.assigned_only', lang) }}</span>
+        </label>
+        <label class="filter-row">
+          <input type="checkbox" name="show_inactive" value="1" {% if show_inactive %}checked{% endif %}/>
+          <span>{{ t('coverage.filter.show_inactive', lang) }}</span>
+        </label>
         <button class="btn btn-secondary" type="submit">{{ t('coverage.apply_filters', lang) }}</button>
+        <a href="/restaurant/locations/request">{{ t('location_requests.link', lang) }}</a>
       </form>
-      <a href="/restaurant/locations/request">{{ t('location_requests.link', lang) }}</a>
     </div>
   </section>
   {% endif %}
