--- a/templates/order.html
+++ b/templates/order.html
@@ -67,4 +67,8 @@
     </aside>
   </main>
 </div>
+
+<footer class="order-ui-build-badge" aria-label="Order UI build marker">
+  ORDER_UI_BUILD: {{ order_ui_build }}
+</footer>
 {% endblock %}
